<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AsthmaGuard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="audio_file">audio8K16bitmono.pcm</string>
    <string name="title_activity_audio_recorder">AudioRecorder</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_play">Play</string>

    <string name="dialog_fragment_tag_general">general_dialog_fragment</string>
    <string name="duration_tag">Duration (minitues):</string>
    <string name="eventtype_tag">Event Type</string>
    <string name="degree_tag">Degree</string>
    <string name="avg_coughing_tag">average coughing duration</string>
    <string name="dateTimelist">Date and time</string>
    <string name="eventTypelist">Event Type</string>
    <string name="durationlist">Duration Time</string>
    <string name="degreelist">Degree</string>
    <string name="btn_delete">DELETE</string>

    <string name="profile_photo_file_name">profile</string>
    <string name="preference_name">my_shared_preferences</string>
    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_phone">profile_phone</string>
    <string name="preference_key_profile_gender">profile_gender</string>
    <string name="preference_key_profile_class">profile_class</string>
    <string name="preference_key_profile_major">profile_major</string>
    <string name="photo_title">Select profile image</string>

    <string name="resource_text">"Asthma, a chronic disease that inflames the airways and lungs,
        causing shortness of breath, wheezing and (in extreme cases) death, affects more than 5 percent
        of the American population. What's more, cases of asthma are increasing, increasing 74
        percent since 1980, with no reduction in sight."
</string>

    <string name="CDCLink">www.cdc.gov/asthma/</string>
    <string name="EPALink">http://www.epa.gov/asthma/</string>
    <string name="APLink">http://www.cdc.gov/nceh/airpollution/links.htm</string>​

    <color name="ripple">#ff80ab</color>
    <color name="accent">#ff4081</color>
    <color name="accent_pressed">#f50057</color>
    <color name="white">#FFFFFF</color>

</resources>
