<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.30">

        <TextView
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Asthma, a chronic disease that inflames the airways and lungs, causing shortness of breath, wheezing and -- in extreme cases -- death, affects more than 5 percent of the American population. What&apos;s more, cases of asthma are increasing, increasing 74 percent since 1980, with no reduction in sight."
            android:id="@+id/main_text_resources"
            android:layout_weight="0.30"
            android:layout_gravity="bottom"
            android:layout_marginTop="39dp"
            android:layout_below="@+id/resources_title"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Resources"
            android:id="@+id/resources_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Here are some Resources:"
            android:id="@+id/url_title"
            android:layout_below="@+id/main_text_resources"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CDCLink"
            android:autoLink="web"
            android:id="@+id/CDC_Txt"
            android:layout_below="@+id/url_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EPALink"
            android:autoLink="web"
            android:id="@+id/EPA_Txt"
            android:layout_below="@+id/CDC_Txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/APLink"
            android:autoLink="web"
            android:id="@+id/AP_Txt"
            android:textSize="20dp"
            android:layout_below="@+id/EPA_Txt"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</LinearLayout>